--- a/rapyuta_ws/src/tags_sub/CMakeLists.txt
+++ b/rapyuta_ws/src/tags_sub/CMakeLists.txt
@@ -70,7 +70,7 @@ catkin_package(
 ## Your package locations should be listed before other locations
 # include_directories(include)
 include_directories(
-    #  include
+     include
   ${catkin_INCLUDE_DIRS}
   ${Yaml_INCLUDE_DIRS}
   ${Boost_INCLUDE_DIRS}
