--- a/rapyuta_ws/src/rapyuta_pose_estimator/package.xml
+++ b/rapyuta_ws/src/rapyuta_pose_estimator/package.xml
@@ -22,8 +22,7 @@
   <build_depend>tf</build_depend>
   <build_depend>message_filters</build_depend>
   <build_depend>apriltags</build_depend>
-
-
+  <build_depend>tf_conversions</build_depend>
 
   <run_depend>cmake_modules</run_depend>
   <run_depend>cv_bridge</run_depend>
@@ -37,7 +36,7 @@
   <run_depend>message_runtime</run_depend>
   <run_depend>message_filters</run_depend>
   <run_depend>apriltags</run_depend>
-
+  <run_depend>tf_conversions</run_depend>
 
   <export>
     <!--nodelet plugin="${prefix}/rapyuta_pose_estimator_nodelet.xml"-->
