--- a/rapyuta_ws/src/rapyuta_msgs/CMakeLists.txt
+++ b/rapyuta_ws/src/rapyuta_msgs/CMakeLists.txt
@@ -50,6 +50,7 @@ add_message_files(
   FILES
   AprilTagDetection.msg
   AprilTagDetections.msg
+  pose.msg
 )
 
 ## Generate services in the 'srv' folder
